fix: Hide metadata based on video interaction (BK-124)
As designed, metadata info covers the video controls, which makes for
terrible UX if it is always shown.  This commit attempts to
conditionally hide the metadata when a user is interacting with the
video.  It could likely use some refinement based on design review.

--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
@@ -12,6 +12,19 @@ brightcove-player {
   }
 }
 
+bolt-video {
+  // Hide the metadata (which covers the controls) if the user is either
+  //   a) watching the video
+  //   b) potentially interacting with the video
+  &:hover,
+  &.is-playing,
+  &:hover.is-paused {
+    brightcove-meta {
+      display: none;
+    }
+  }
+}
+
 
 .video-js {
   // @supports (--custom:property) {
